--- a/Course-of-a-Boat/Packages/manifest.json
+++ b/Course-of-a-Boat/Packages/manifest.json
@@ -6,5 +6,6 @@
     "com.unity.physics": "1.0.14",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.modules.uielements": "1.0.0"
-  }
+  },
+  "enableLockFile": false
 }
