--- a/New-Start/Packages/manifest.json
+++ b/New-Start/Packages/manifest.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.9.7",
     "com.unity.entities.graphics": "1.0.16",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.inputsystem": "1.7.0",
     "com.unity.physics": "1.0.16",
     "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.uielements": "1.0.0"
   },
   "enableLockFile": false
