--- a/New-Start/Packages/manifest.json
+++ b/New-Start/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.physics": "1.0.16",
+    "com.unity.probuilder": "5.1.1",
     "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.uielements": "1.0.0"
