Monsters move towards me!

--- a/New-Start/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/New-Start/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -124,12 +124,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":-0.8329324722290039,\"y\":0.9015849828720093,\"z\":-5.752082824707031}}"
+                "value": "{\"m_Value\":{\"x\":-0.5632143020629883,\"y\":0.3964793086051941,\"z\":0.5566335916519165}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastRotation",
-                "value": "{\"m_Value\":{\"x\":0.0,\"y\":0.0,\"z\":0.0,\"w\":1.0}}"
+                "value": "{\"m_Value\":{\"x\":0.0,\"y\":0.7071067094802856,\"z\":0.0,\"w\":-0.7071067094802856}}"
             },
             {
                 "type": "UnityEngine.Material, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
