--- a/New-Start/Packages/manifest.json
+++ b/New-Start/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.entities.graphics": "1.0.16",
     "com.unity.ide.rider": "3.0.26",
