--- a/New-Start/Packages/manifest.json
+++ b/New-Start/Packages/manifest.json
@@ -4,7 +4,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "3.1.2",
-    "com.unity.entities.graphics": "1.0.16",
+    "com.unity.entities.graphics": "1.2.0-pre.6",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
